--- a/styles.css
+++ b/styles.css
@@ -1,83 +1,190 @@
-body {
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-   margin: 0px;
+/* General purposes */
+* {
+    margin: 0;
+    padding: 0;
 }
 
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header, .signup-section, footer, button {
+    color: #FAF9F8;
+}
+
+
+
+/* First segment of the page */
 header {
     background-color: #1F2937;
-    padding: 15px;
+    padding: 15px 130px 140px;
+}
+
+nav {
+    align-items: center; 
+    margin-bottom: 115px;
+}
+
+nav, .nav-section {
+    display: flex;    
+    justify-content: space-between;
 }
 
 h1 {
-    color: #F9FAF8;    
     font-weight: bolder;
-    margin: 0px; 
-    padding: 0px;
 }
-
 
 h1.logo-text { 
     font-size: 24px; 
 }
 
-h1.main-text {
+h1.primary-text {
     font-size: 48px;    
 }
 
-.secondary-text {
-    font-size: 18px;
-    color: #E5E7EB;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 ul {
-    list-style: none;
-    display: flex;
-    padding: 0px;
-    margin: 0px;    
+    display: flex;  
+    list-style: none;     
 }
 
-li {
+ul > li {
     padding-left: 25px;
 }
 
-a {
+.secondary-text {
+    color: #E5E7EB;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;    
+}
+
+a.secondary-text {
     text-decoration: none;
 }
 
-nav {
-    align-items: center;
+.nav-content {
+    width: 450px;
 }
 
-nav, .main-section {
-    display: flex;
-    margin: 0px 115px 115px;
-    justify-content: space-between;
-}
-
-button {
-    background-color: #3882F6;
-    color: #F9FAF8; 
-    height: 36px;
-    width: 125px;
-    border-radius: 8px;
-    border: 0px;
-    font-size: 18px;
-    font-weight: bold;
-    margin-top: 12px;
-}
-
-
-p {
-    margin: 0px;
-}
-
-
-.image {
+.nav-image {
     background-color: gray;   
     width: 515px; 
 }
 
-.main {
-    width: 450px;
+/* css object common to both buttons */
+.btn-features {
+    background-color: #3882F6;
+    border: 0px; 
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    height: 36px;
+    margin-top: 12px;
+    width: 125px;    
+}
+
+
+
+/* Second segment of the page */
+.images-section h1 {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bolder;
+    margin: 48px auto;
+    text-align: center;
+}
+
+.images-content {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px auto;
+    width: 805px;    
+}
+
+.image-item {     
+    margin-bottom: 100px;
+    width: 168px; 
+}
+
+.image {
+    border: 4px solid #3882F6;
+    border-radius: 16px;
+    height: 160px;
+    width: 160px;     
+}
+
+.caption {
+    color: dimgray;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding-top: 10px;    
+    text-align: center;    
+}
+
+
+
+
+/* Third segment of the page */
+.quote-section {
+    background-color: #E5E7EB;    
+    display: flex;
+    justify-content: center;      
+    padding-top: 120px;
+}
+
+.quote-section blockquote {  
+    color: #1F2937;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-size: 36px;
+    font-style: italic;    
+    font-weight:lighter;
+    width: 815px;
+}
+
+.quote-section figcaption {
+    font-size: 25px;
+    padding: 10px 30px 85px;
+    text-align: right;
+}
+
+
+
+/* Fourth segment of the page */
+.signup-section {
+    padding: 90px 130px;
+}
+
+.signup {
+    background-color: #3882F6;
+    border-radius: 8px ;
+    display: flex;
+    justify-content: space-between;    
+    padding: 50px 120px;
+}
+
+.signup p {
+    font-size: 23px;
+}
+
+.signup span {
+    color: #E5E7EB;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;    
+}
+
+.signup button {
+    border: 2px solid #FAF9F8 ;
+}
+
+
+
+/* Fifth segment of the page */
+footer {
+    background-color: #1F2937;
+    padding: 40px 0;
+}
+ 
+footer p {    
+    font-size: 18px;
+    text-align: center; 
 }
