--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,8 @@ a.secondary-text {
 
 .nav-image {
     background-color: gray;   
-    width: 515px; 
+    width: 515px;
+    height: 269px; 
 }
 
 /* css object common to both buttons */
@@ -87,7 +88,7 @@ a.secondary-text {
 
 /* Second segment of the page */
 .images-section h1 {
-    color: #1F2937;
+    color: #1d1e20;
     font-size: 36px;
     font-weight: bolder;
     margin: 48px auto;
@@ -103,10 +104,9 @@ a.secondary-text {
 
 .image-item {     
     margin-bottom: 100px;
-    width: 168px; 
 }
 
-.image {
+.image img{
     border: 4px solid #3882F6;
     border-radius: 16px;
     height: 160px;
@@ -137,7 +137,6 @@ a.secondary-text {
     font-family: Arial, Helvetica, sans-serif;  
     font-size: 36px;
     font-style: italic;    
-    font-weight:lighter;
     width: 815px;
 }
 
@@ -145,6 +144,7 @@ a.secondary-text {
     font-size: 25px;
     padding: 10px 30px 85px;
     text-align: right;
+    font-weight: bolder;
 }
 
 
