--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,11 @@ a.secondary-text {
 }
 
 .quote-section blockquote {  
+    color: #1F2937;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-size: 36px;
+    font-style: italic;    
+    width: 815px;
 }
 
 .quote-section figcaption {
